# my-focal-ai

./: .editorconfig  .envrc  .gitignore  .vercelignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  flake.nix  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  start.sh  vercel.json
.claude/: README.md  settings.json
.claude/hooks/: protect-files.sh
.claude/references/: module-map.md
.claude/rules/: conventions.md  docs-update.md  workflow.md
.githooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug.yml  (+2 more)
api/: explore.py  fetch-source.py  fetch_source.py  index.py  resolve_url.py
config/: principles.yml  sources.yml
docker/: docker-compose.yml
docs/: README.md  architecture.md  deployment.md  development.md  module-map.md  scoring.md  sources.md
e2e/: responsive.spec.ts  tour.spec.ts  trends-tabs.spec.ts
scripts/: check-static-pages.sh  com.ainews.local-push.plist  com.ainews.local-push.plist.example  local-push.sh  sync_olshansk_feeds.py  sync_rsshub_routes.py  url_map_utils.py
sql/: 002_user_accounts.sql  supabase_schema.sql
static/: about.html  admin.html  auth-nav.js  badges.js  ccc.html  config.json  data.json  events.html  fluid-type.css  index.html  leaderboard.html  nav.js  shared-config.js  tour.js  trends.html
supabase/: config.toml
templates/: _base.html  about.html  admin.html  ccc.html  dashboard.html  events.html  leaderboard.html  trends.html
tests/: run_badges_test.mjs  test_admin.py  test_aitmpl_trending.py  test_backfill.py  test_badges.html  test_cloud_fetch.py  test_db.py  test_e2e.py  test_explore.py  test_explore_validate.py  test_export.py  test_filter_badges.html  test_github_trending.py  test_ingest_utils.py  test_integration_supabase.py  test_models.py  test_scorer.py  test_scorer_integration.py  test_skillssh_trending.py  test_supabase_backend.py  test_supabase_manager.py  test_sync_scripts.py  test_url_resolver.py
(+50 files in other folders)
